Overhaul to client update management and event system.